Fixed layout issue

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,6 +32,7 @@ img {
 }
 
 .bg-blur {
+    transition: all 0.5s ease-in-out;
     backdrop-filter: blur(12px) saturate(100%);
     -webkit-backdrop-filter: blur(12px) saturate(100%);
 }
